# TR-CodeBench

./: .env.example  .gitignore  README.md  pyproject.toml  test_oracles.py
candidates/: README.md  naive_dijkstra_bellman_ford.py  naive_fenwick_linear.py  naive_kmp_brute_force.py  naive_lis_o_n2.py
docs/: ARCHITECTURE.md  REVIEW_ROADMAP.md  SPEC.md
notebooks/: openrouter_real_world_eval.ipynb  trcb_analysis.ipynb
oracles/: __init__.py  trcb_proto_0001.py  trcb_proto_0002.py  trcb_proto_0003.py  trcb_proto_0004.py  trcb_proto_0005.py  trcb_proto_0006.py  trcb_proto_0007.py  trcb_proto_0008.py  trcb_proto_0009.py  trcb_proto_0010.py  trcb_proto_0011.py  trcb_proto_0012.py  trcb_proto_0013.py  trcb_proto_0014.py  trcb_proto_0015.py  trcb_proto_0016.py  trcb_proto_0017.py  trcb_proto_0018.py  trcb_proto_0019.py  trcb_proto_0020.py  trcb_proto_0021.py  trcb_proto_0022.py  trcb_proto_0023.py  trcb_proto_0024.py  trcb_proto_0025.py  trcb_proto_0026.py  trcb_proto_0027.py  trcb_proto_0028.py  trcb_proto_0029.py  trcb_proto_0030.py  trcb_proto_0031.py  trcb_proto_0032.py  trcb_proto_0033.py  trcb_proto_0034.py  trcb_proto_0035.py  trcb_proto_0036.py  trcb_proto_0037.py  trcb_proto_0038.py  trcb_proto_0039.py  (+1 more)
prompts/: codex_generation_prompt.md  prompt_template_t2.md
reports/: dataset_quality_template.md
schemas/: item.schema.json
scripts/: aggregate_metrics.py  annotate_oracle_features.py  research_agent.py  run_openrouter_eval.sh
strategies/: arrays.py  data_structures.py  dp.py  graphs.py  graphs_extended.py  intervals.py  math_combinatorics.py  sorting.py  (+2 more)
(+117 files in other folders)
